fix: fix the subtitle and site-nav-toggle are overlapping on the mobile case

--- a/source/css/_schemes/Pisces/_menu.styl
+++ b/source/css/_schemes/Pisces/_menu.styl
@@ -64,4 +64,7 @@
   +tablet() {
     display: block;
   }
+  +mobile() {
+    top: 35%;
+  }
 }
